# brd4314a-blinky

./: .gitmodules  CMakeLists.txt  README.txt
src/: CMakeLists.txt  main.c
